fixed dark mode background

--- a/src/App.css
+++ b/src/App.css
@@ -560,7 +560,7 @@ body.dark-mode .darkmode-toggle {
 
 /* Dark mode styles */
 body.dark-mode {
-  background-color: #000000;
+  background-color: #393237;
   color: #f5f5f5;
   
 }
